src/objects/loan__Repayment_Schedule_Summary__c.object
<CustomObject>
    <fields>
        <fullName>loan__Consider_disbursed_LoanAmt_for_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider disbursed LoanAmt for Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Consider_total_Loan_Amount_for_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider total Loan Amount for Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Last_Repayment_Start_Date_on_req__c</fullName>
        <label>Last Repayment Start Date on req</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Other_Loan_Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Other Loan Transaction</label>
        <referenceTo>loan__Other_Transaction__c</referenceTo>
        <relationshipLabel>Repayment Schedule</relationshipLabel>
        <relationshipName>Repayment_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Contract_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__RSS_ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Loan_Account__c</fullName>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Repayment_Schedule_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__RSS_No_Of_Pmts__c</fullName>
        <label>Number Of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Primary_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Repayment_Amt__c</fullName>
        <label>Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Repayment_Dt__c</fullName>
        <label>Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Seq__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_System_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Start_Date_on_Request__c</fullName>
        <label>Repayment Start Date on Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__number_of_months_before_repayment_starts__c</fullName>
        <label>number of months before repayment starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Repayment Schedule</label>
    <nameField>
        <displayFormat>RSS-{0000000000}</displayFormat>
        <label>Repayment Schedule id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>